testsuite/tests/linear/should_fail/LinearPartialSig.stderr

LinearPartialSig.hs:5:13: error:
    • Found type wildcard ‘_’
        standing for ‘'Many :: GHC.Types.Multiplicity’
      To use the inferred type, enable PartialTypeSignatures
    • In the type ‘a # _ -> a’
      In the type signature: f :: a # _ -> a
